fixed animation on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -368,6 +368,7 @@ footer {
         line-height: 1em;
         white-space: nowrap;
         overflow: hidden;
+        border-right: 7px solid rgba(255,255,255,.75);
     }
 
     h2 {
@@ -465,6 +466,7 @@ footer {
     }
 
     p {
+        align-self: center;
         color: $text;
         margin: 0;
     }
@@ -961,7 +963,7 @@ footer {
         top: auto;
 
         h1 {
-            border-right: 0px 
+            border-right: 0px; 
             font-size: 2.75em;
         }
 
@@ -1016,6 +1018,7 @@ footer {
         animation-play-state: paused;
         h1 {
             font-size: 2em;
+            border-right: 0px;
         }
 
         h2 {
@@ -1089,6 +1092,7 @@ footer {
         animation-play-state: paused;
         h1 {
             font-size: 1.5em;
+            border-right: 0px;
         }
 
         h2 {
